// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message ComputeBetaNetworkFirewallPolicyAssociation {
  string name = 1;
  string attachment_target = 2;
  string firewall_policy = 3;
  string short_name = 4;
  string location = 5;
  string project = 6;
}

message ApplyComputeBetaNetworkFirewallPolicyAssociationRequest {
  ComputeBetaNetworkFirewallPolicyAssociation resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteComputeBetaNetworkFirewallPolicyAssociationRequest {
  string service_account_file = 1;
  ComputeBetaNetworkFirewallPolicyAssociation resource = 2;
}

message ListComputeBetaNetworkFirewallPolicyAssociationRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
  string FirewallPolicy = 4;
}

message ListComputeBetaNetworkFirewallPolicyAssociationResponse {
  repeated ComputeBetaNetworkFirewallPolicyAssociation items = 1;
}

service ComputeBetaNetworkFirewallPolicyAssociationService {
  rpc ApplyComputeBetaNetworkFirewallPolicyAssociation(ApplyComputeBetaNetworkFirewallPolicyAssociationRequest) returns (ComputeBetaNetworkFirewallPolicyAssociation);
  rpc DeleteComputeBetaNetworkFirewallPolicyAssociation(DeleteComputeBetaNetworkFirewallPolicyAssociationRequest) returns (google.protobuf.Empty);
  rpc ListComputeBetaNetworkFirewallPolicyAssociation(ListComputeBetaNetworkFirewallPolicyAssociationRequest) returns (ListComputeBetaNetworkFirewallPolicyAssociationResponse);
}
